--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-21 09:17:00
+lastsearch = 2024-07-21 14:12:17
 
 [en.wikipedia.org]
-match = -28.6%%
-title = Park Chung Hee
-url = https://en.wikipedia.org/wiki/Park_Chung_Hee
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -414,7 +414,7 @@ url = https://8tharmy.korea.army.mil/site/index.asp
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=3672c068e7112759&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjznc_847aHAxUpxuYEHecnBcgQsZYEegQINRAC
+url = https://www.google.com/search?sca_esv=4d286f4f3872d725&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjlvNywyreHAxV_jYkEHZCsDXkQsZYEegQIRxAC
 
 [www.outlookindia.com]
 match = -170.0%%
