--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-21 06:33:56
+lastsearch = 2024-07-21 14:29:56
 
 [www.instagram.com]
-match = -376.9%%
-title = som1aej 🌌🎉 AEJ Team宠粉福利Giveaway! 🎉🌌 我们将送出 ...
-url = https://www.instagram.com/chan.h.yee.98/p/C21XGIDJZVE/
+match = -176.9%%
+title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
+url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -302,7 +302,7 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -230.8%%
-title = South Korea: First lady's Dior bag shakes ... - BBC
+match = -261.5%%
+title = South Korea: First lady's Dior bag shakes country's ...
 url = https://www.bbc.com/news/world-asia-68090638
 
