--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-21 13:41:56
+lastsearch = 2024-07-21 14:31:22
 
 [chieutrelanlan.com]
 match = -16.7%%
@@ -57,9 +57,9 @@ title = Thế Giới Chiếu Trúc
 url = https://www.facebook.com/thegioichieutruc/
 
 [chieutrucsaigon.com]
-match = 12.5%%
-title = NHÀ BÁN LẼ CHIẾU TRÚC HÀNG ĐẦU TPHCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/nha-ban-le-chieu-truc-hang-dau-tphcm-83.html
+match = 8.3%%
+title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
 
 [www.xskthcm.com]
 match = -83.3%%
