--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-07-21 12:38:57
+lastsearch = 2024-07-21 14:29:45
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đen không viền lson 18
 url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 
 [chieutrelinhchi.com]
-match = 24.2%%
-title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1m6x1m9
-url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-khong-vien-mau-vang-1m6x1m9-91.html
+match = 21.2%%
+title = Chiếu trúc hạt nhỏ không viền màu nâu đen Size: 1m8x2m
+url = https://chieutrelinhchi.com/chieu-truc-1m8/chieu-truc-hat-nho-khong-vien-mau-nau-1m8x2m-101.html
 
 [demxanh.com]
 match = 42.4%%
@@ -42,9 +42,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu trúc 1m8 - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/chiếu/trúc/1m8
+match = -3.0%%
+title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [vongxepsaigon.vn]
 match = 27.3%%
