--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-07-21 13:46:42
+lastsearch = 2024-07-21 14:25:50
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -12,8 +12,8 @@ title = ĐỆM LÒ XO EVERON, KING KOIL
 url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [everonkorea.com]
-match = 31.8%%
-title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
+match = 14.9%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm - Everon Korea
 url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [demxanh.com]
@@ -32,13 +32,13 @@ title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
 url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [www.diepxuan.com]
-match = 36.2%%
-title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
+match = 48.9%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27 - Điệp Xuân
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
-match = 53.2%%
-title = Everon Quảng Bình Nệm lò xo Everon Kingkoil 180x200x27 CLOUD ...
+match = 100.0%%
+title = Nệm lò xo Everon Kingkoil 180x200x27 CLOUD FIRM
 url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.html
 
 [everonvn.com.vn]
