--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-21 13:21:38
+lastsearch = 2024-07-21 14:24:57
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -22,9 +22,9 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = 10.5%%
-title = Courtney Lyles, PhD
-url = https://profiles.ucsf.edu/courtney.lyles
+match = -7.7%%
+title = Li Zhang, PhD
+url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
 match = -168.4%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -41.7%%
-title = Tommi Gaines
-url = https://profiles.ucsd.edu/tommi.gaines
+match = -10.5%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [medboard.nv.gov]
 match = -100.0%%
@@ -72,9 +72,9 @@ title = Politics, Policy, Political News - POLITICO
 url = https://www.politico.com/
 
 [som.cuanschutz.edu]
-match = -126.3%%
-title = Tell Bennett, MD Professor, Biomedical Informatics
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/22381
+match = -163.2%%
+title = Robin Shandas, PhD Professor, University of Colorado - Denver
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17849
 
 [cpr.heart.org]
 match = -94.7%%
@@ -365,4 +365,14 @@ url = https://www.ipcc.ch/site/assets/uploads/2018/03/ar4_wg2_full_report.pdf
 match = 5.3%%
 title = Faculty Publications
 url = https://www.odu.edu/library/faculty-publications
+
+[www.mdanderson.org]
+match = -47.4%%
+title = The Brief Pain Inventory User Guide
+url = https://www.mdanderson.org/documents/Departments-and-Divisions/Symptom-Research/BPI_UserGuide.pdf
+
+[iopscience.iop.org]
+match = -89.5%%
+title = ASTROPHYSICAL IMPLICATIONS OF THE BINARY ...
+url = https://iopscience.iop.org/article/10.3847/2041-8205/818/2/L22/pdf
 
