--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-21 09:17:52
+lastsearch = 2024-07-21 14:25:39
 
 [ninhouse.vn]
 match = -246.2%%
@@ -47,9 +47,9 @@ title = UltraSheer - Siêu mỏng, vớ gối, màu da, kín ngón
 url = https://shopykhoa.com/ultrasheer-sieu-mong-vo-goi-mau-da-kin-ngon-sp101.htm
 
 [tiki.vn]
-match = -200.0%%
-title = Vỏ gối nằm Cotton poly Mẫu Kẻ Râu Ghi (Được lựa mẫu)
-url = https://tiki.vn/vo-goi-nam-cotton-poly-mau-ke-rau-ghi-duoc-lua-mau-p125218703.html
+match = -253.8%%
+title = Mua (Rẻ vô địch) Vỏ gối nằm Cotton poly Mẫu Kẻ Râu Ghi ...
+url = https://tiki.vn/re-vo-dich-vo-goi-nam-cotton-poly-mau-ke-rau-ghi-duoc-lua-mau-p118381631.html
 
 [gonbedding.vn]
 match = -15.4%%
