--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-21 13:20:01
+lastsearch = 2024-07-21 14:30:27
 
 [www.lazada.vn]
-match = -26.7%%
-title = Vỏ Gối ôm Vuông Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/vo-goi-om-vuong/
+match = -40.0%%
+title = Vỏ Gối Sofa Vuông Giá Tốt T06/2024
+url = https://www.lazada.vn/tag/vo-goi-sofa-vuong/?page=4
 
 [shopee.vn]
-match = -166.7%%
-title = Vỏ Gối Tựa Vuông, Gối Tựa Sofa, Gối Tựa Lưng Nhung ...
-url = https://shopee.vn/Vỏ-Gối-Tựa-Vuông-Gối-Tựa-Sofa-Gối-Tựa-Lưng-Nhung-Trơn-2-Mặt-Siêu-Bền-i.29215914.10516331485
+match = -180.0%%
+title = Vỏ gối vuông tựa lưng sofa 45x45cm 40x40cm Cotton 100 ...
+url = https://shopee.vn/Vỏ-gối-vuông-tựa-lưng-sofa-45x45cm-40x40cm-Cotton-100-Hàn-Quốc-cao-cấp-màu-trơn-vải-nhập-khẩu-i.394907567.21561011731
 
 [jysk.vn]
 match = -166.7%%
@@ -27,9 +27,9 @@ title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
 url = https://chus.vn/vo-goi-vuong-hmong/
 
 [ninhouse.vn]
-match = -106.7%%
-title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+match = -193.3%%
+title = Áo gối | Bao gối đẹp giá rẻ NIN House cao cấp tại Tphcm
+url = https://ninhouse.vn/collections/vo-goi
 
 [lepetit.com.vn]
 match = -6.7%%
