--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-21 02:18:00
+lastsearch = 2024-07-21 14:44:15
 
 [tiki.vn]
 match = 16.0%%
@@ -27,9 +27,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [www.facebook.com]
-match = 12.0%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -60.0%%
+title = Du lịch tự do Đài Loan | Ngày 12 tháng 4 phim Mai của ...
+url = https://www.facebook.com/groups/867394263291528/posts/ngày-12-tháng-4-phim-mai-của-trấn-thành-sẽ-được-công-chiếu-toàn-đài-loan-với-tiê/7807974442566774/
 
 [vi.wikipedia.org]
 match = 6.7%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -88.0%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 12 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=Qzd1oRmbvFM
+match = -56.0%%
+title = "SỐC" VỚI 12 SỰ THẬT THÚ VỊ VỀ ĐÀI LOAN | Cách Trung ...
+url = https://www.youtube.com/watch?v=DWqUd9AkeCo
 
 [znews.vn]
 match = -40.0%%
