--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-21 11:19:39
+lastsearch = 2024-07-21 14:44:04
 
 [burningman.org]
 match = 0.0%%
@@ -154,7 +154,7 @@ url = https://boardofwatersupply.com/appjqsYgH7155
 [steamcommunity.com]
 match = -53.3%%
 title = Cộng đồng Steam :: Dawn of Man
-url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=10
+url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=196
 
 [register.fca.org.uk]
 match = -6.7%%
@@ -765,4 +765,9 @@ url = https://ecotarium.org/
 match = -6.7%%
 title = Northrop Grumman: Home
 url = https://www.northropgrumman.com/
+
+[www.samsung.com]
+match = -200.0%%
+title = Samsung US | Mobile | TV | Home Electronics | Home ...
+url = https://www.samsung.com/us/
 
