--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-21 14:24:26
+lastsearch = 2024-07-21 14:44:29
 
 [www.bible.com]
-match = -128.6%%
-title = MARKA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
+match = -135.7%%
+title = JOHANA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -22,9 +22,9 @@ title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
 url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 
 [munghoangphat.com]
-match = -21.4%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -135.7%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [manthutrang.com]
 match = -207.1%%
@@ -82,9 +82,9 @@ title = Jamie Oliver (@jamieoliver) • Instagram photos and videos
 url = https://www.instagram.com/jamieoliver/?hl=en
 
 [en.wikipedia.org]
-match = -100.0%%
-title = Lü Bu
-url = https://en.wikipedia.org/wiki/Lü_Bu
+match = 27.3%%
+title = Kim Tu-bong
+url = https://en.wikipedia.org/wiki/Kim_Tu-bong
 
 [mail.storyfb.com]
 match = 35.7%%
@@ -160,4 +160,9 @@ url = https://isac.uchicago.edu/sites/default/files/uploads/shared/docs/as16.pdf
 match = -92.9%%
 title = Translate from English to Hmong Daw
 url = http://www.bing.com/translator?from=en&to=mww
+
+[thuedochoi.com]
+match = -107.1%%
+title = Màn Chụp Tự Bung 1m8 x 2m - thuedochoi.com
+url = https://thuedochoi.com/man-chup-tu-bung-1m8-x-2m-p2233.html
 
