--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-21 15:20:22
+lastsearch = 2024-07-21 15:49:03
 
 [hanvico.com.vn]
-match = 33.3%%
-title = Bộ ga chun LIVING - LV54
-url = https://hanvico.com.vn/san-pham/lv54/
+match = 28.6%%
+title = Bộ ga chun My Youth - MY14
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my14/
 
 [www.diepxuan.com]
 match = -4.8%%
@@ -22,9 +22,9 @@ title = BỘ CHĂN GA KẺ CARO MODAL 14 - La Sante Việt Nam
 url = https://lasantevn.com/bo-chan-ga-ke-caro-modal-14/
 
 [chandem.com.vn]
-match = 33.3%%
-title = Bộ chăn ga gối Pink Girl Y14
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-y14/
+match = 4.8%%
+title = Bộ chăn ga gối cao cấp Chang My P144
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-p144/
 
 [koala.vn]
 match = -38.1%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
-url = https://changagoidemsonghong.com/chan-ga-goi-bc61
+match = -23.8%%
+title = Chăn ga gối 100%% cotton mã mầu BC22-060
+url = https://changagoidemsonghong.com/chan-ga-goi-bc60
 
 [songhong.info]
 match = -19.0%%
