--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-21 15:22:22
+lastsearch = 2024-07-21 15:45:53
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -85.7%%
-title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
-url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
+match = 28.6%%
+title = Xin chào, tôi ở Đài Loan
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [www.roc-taiwan.org]
 match = -19.0%%
@@ -67,9 +67,9 @@ title = Hứa Quang Hán 'ghi điểm' trong phim Đài Loan có doanh ...
 url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-thu-chieu-som-cao-nhat-1852404081738149.htm
 
 [www.youtube.com]
-match = -114.3%%
-title = Cao thủ gắp đồ 18+ ở Đài Loan và cái kết ‘’ Cực Kỳ Thuyết ...
-url = https://www.youtube.com/watch?v=NJHWqhEqVy0
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 01 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=lLYRcG4ULzg
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -87,9 +87,9 @@ title = Đài Loan (Trung Quốc) tiếp tục tìm kiếm 18 người mất tí
 url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich-sau-dong-dat-post803249.html
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [znews.vn]
 match = -104.8%%
@@ -245,4 +245,9 @@ url = https://visana.vn/visa-tham-than-dai-loan/
 match = -109.5%%
 title = Hoa Kỳ, Trung Quốc và Đài Loan và vai trò của răn đe ...
 url = https://vietbao.com/a319583/hoa-ky-trung-quoc-va-dai-loan-va-vai-tro-cua-ran-de-trong-cac-kich-ban-khong-gay-chien
+
+[www.voatiengviet.com]
+match = -114.3%%
+title = Chủ tịch Tập tiếp cựu tổng thống Đài Loan: Không ai có thể ...
+url = https://www.voatiengviet.com/a/chu-tich-tap-tiep-cuu-tong-thong-dai-loan-khong-ai-co-the-ngan-duoc-doan-tu-gia-dinh-/7564385.html
 
