--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-21 15:38:17
+lastsearch = 2024-07-21 15:44:01
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = Tin tức 24h tối 18/7: Mâu thuẫn, em trai bị anh ruột dùng hu
 url = https://www.youtube.com/watch?v=hteDrQdI8UA
 
 [books.google.com]
-match = -162.5%%
-title = Annuaire général de l'Indochine. Partie commerciale
-url = https://books.google.com/books?id=RbcVAQAAIAAJ&pg=PA828&lpg=PA828&dq=chieu+lac+soc+18&source=bl&ots=6MkLDE70WP&sig=ACfU3U0L6imIyN5SakFzLR-vDSEKAIAi6A&hl=en&sa=X&ved=2ahUKEwjm0PTM3beHAxVQC3kGHQH0C_8Q6AF6BAgiEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=spyaAAAAIAAJ&pg=RA2-PA82&lpg=RA2-PA82&dq=chieu+lac+soc+18&source=bl&ots=N_Zdh0wZYz&sig=ACfU3U1HhTaCNC9DQyu4fM0VsCB4ROrMbA&hl=en&sa=X&ved=2ahUKEwiswPnw3reHAxXpF1kFHQpzDDcQ6AF6BAgeEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -222,9 +222,9 @@ title = Chuyển phát nhanh Phương Trang ...
 url = https://futaexpress.vn/chi-nhanh
 
 [baolongan.vn]
-match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+match = -125.0%%
+title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
+url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [baothuathienhue.vn]
 match = -200.0%%
