--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-21 14:44:49
+lastsearch = 2024-07-21 15:52:44
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -985,4 +985,9 @@ url = https://www.mnsu.edu/
 match = -206.7%%
 title = VERSACE US | High Fashion Luxury Clothing & Accessories
 url = https://www.versace.com/us/en/
+
+[www.fox13now.com]
+match = -213.3%%
+title = FOX 13 Utah and Salt Lake City: Breaking News, Weather ...
+url = https://www.fox13now.com/
 
