--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-21 15:19:37
+lastsearch = 2024-07-21 15:52:33
 
 [thamaulac.com.vn]
 match = -88.9%%
@@ -17,9 +17,9 @@ title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp 
 url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamvinhthuan.com]
-match = 16.7%%
-title = Thảm xốp một màu 60cm x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
+match = -105.6%%
+title = Thảm Xốp Một Màu - Thảm Trải Sàn Vĩnh Thuận TPHCM
+url = https://thamvinhthuan.com/danh-muc/tham-xop/tham-xop-mot-mau/
 
 [trieuchau.com]
 match = -61.1%%
