--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-21 15:15:36
+lastsearch = 2024-07-21 15:50:54
 
 [tuananh.vn]
 match = 22.2%%
@@ -27,9 +27,9 @@ title = Bảng Giá đệm mút Korea Tuấn Anh - Mới 2023 [Giảm -50%%]
 url = https://thegioidemviet.vn/dem-mut-pe-korea-tuan-anh/
 
 [shopee.vn]
-match = -48.0%%
-title = Bảo hành 5 năm] - Đệm Bông kháng khuân Korea Tuấn Anh
-url = https://shopee.vn/-Thanh-Lý-Bảo-hành-5-năm-Đệm-Bông-kháng-khuân-Korea-Tuấn-Anh-i.51328850.5194560405
+match = -40.0%%
+title = nệm tuấn anh giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=nệm tuấn anh
 
 [demviethome.vn]
 match = -4.0%%
